--- a/app/views/home/makefanclub.html.erb
+++ b/app/views/home/makefanclub.html.erb
@@ -9,7 +9,7 @@
   <div class="col-sm-6">
     <div class="text-center mt-5 h2">ファンクラブを無料で開設する</div>
     <div class="text-center mt-2">
-      (サイト名)では完全無料でファンクラブを開設することができます。<br>
+      (サイト名)ではでファンクラブを開設することができます。<br>
       頑張るあなたの活動を応援します。
     </div>
   </div>
