--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
           <% end %>
         </li>
       <% else %>
-        <li class="nav-item"><%= link_to 'アイメモとは？', new_user_registration_path, class: 'no-underline', style: "color: #000;" %></li>
+        <li class="nav-item"><%= link_to 'アイメモとは？', new_user_registration_path, class: 'no-underline' %></li>
         <li class="nav-item"><%= link_to '新規登録', new_user_registration_path, class: 'no-underline' %></li>
         <li class="nav-item"><%= link_to 'ログイン', new_user_session_path, class: 'no-underline' %></li>
       <% end %>
