--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 
 
  html, body {
-  font-family: HanziPen SC;
+  font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
   min-width: 1200px;
   height: 100%;
 }
@@ -39,6 +39,7 @@ ul{
   min-width: 1200px;
   margin: 0;
   padding: 0;
+  padding-bottom: 30px;
 }
 
 .home-nav{
@@ -79,5 +80,15 @@ ul{
   margin-left: 160px;
 }
 
+#footer{
+  width: 100%;
+  height: 100px;
+  background-color: rgb(246, 239, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
+.footer-primary{
+  font-size: 30px;
+}
