--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,6 @@
 <footer id="footer">
-  <section class="primary">
-    <p class="logo"><a href="#">IMEMO</a></p>
-    <div class="navi-row">
-      <ul class="navi">
-        <li><a href="#">ホーム</a></li>
-        <li><a href="#">権利規約</a></li>
-        <li><a href="#">プライバシーポリシー</a></li>
-      </ul>
-    </div>
+  <section class="footer-primary">
+    <%= link_to "IMEMO", root_path %>
   </section>
 </footer>
+
