画像表示変更（本番環境に対応するため）

--- a/app/views/home/makefanclub.html.erb
+++ b/app/views/home/makefanclub.html.erb
@@ -4,12 +4,12 @@
 
 <div class="row">
   <div class="col-sm-6">
-    <img src="/assets/05.jpg" alt style="width: 600px;">
+    <%= image_tag('05.jpg', style: "width: 600px;")  %>
   </div>
   <div class="col-sm-6">
     <div class="text-center mt-5 h2">ファンクラブを無料で開設する</div>
     <div class="text-center mt-2">
-      (サイト名)ではでファンクラブを開設することができます。<br>
+      IMEMOでは無料でファンクラブを開設することができます。<br>
       頑張るあなたの活動を応援します。
     </div>
   </div>
@@ -17,7 +17,7 @@
 
 <div class="row mt-5">
   <div class="col-sm-6">
-    <img src="/assets/06.jpg" alt style="width: 600px;">
+    <%= image_tag('06.jpg', style: "width: 600px;")  %>
   </div>
   <div class="col-sm-6">
     <div class="text-center mt-5 h2">ブログやイベントなど便利機能を</div>
